--- a/WebBellwether.Web/appData/translations/translation_2.json
+++ b/WebBellwether.Web/appData/translations/translation_2.json
@@ -138,6 +138,8 @@
   "LanguageAdded": "Język został dodany",
   "LanguageNotAdded": "Język nie został dodany",
   "LanguageExists": "Taki język juz istnieje",
+  "RemovingLanguage": "Usuwanie języka :",
+  "RemovingLanguageDialog": "Operacja spowoduje usunięcie wszystkich translacji (struktura strony , gry integracyjne , kawały). Nie będzie możliwości odzyskania tych danych. Język polski oraz angielski są nieusuwalne bo stanowią szablon dla nowych językowych translacji",
   "YourLogin": "Twój login",
   "EnterYourLogin": "Proszę wprowadz swój login",
   "YourPassword": "Twoje hasło",
