--- a/WebBellwether.Web/appData/translations/translation_1.json
+++ b/WebBellwether.Web/appData/translations/translation_1.json
@@ -89,6 +89,7 @@
   "ListOfJokeCategoryIncludesAvailableTranslation": "List of joke category with available translations",
   "OtherTranslationForTheCurrentlySelectedJokeCategoryAndLanguage": "Other translation for currently selected joke category and language",
   "SelectLanguageForTheJokeCategory": "Select language for the joke category",
+  "JokeCategoryNotEdited": "Joke category was not edited",
   "JokeCategoryEdited": "Joke category was edited",
   "JokeCategoryNotExists": "Joke category not exists",
   "JokeCategoryDeleted": "Joke category was deleted",
@@ -140,6 +141,9 @@
   "LanguageExists": "This Language exists",
   "RemovingLanguage": "Removing language :",
   "RemovingLanguageDialog": "The operation will remove all translations (site structure, integration games, jokes). There will be no possibility of recovering that data. Language Polish and English are not removable because they are the template for the new language translation",
+  "LanguageCanNotBeRemoved": "Language can not be deleted because it is the list of languages irremovable",
+  "LanguageRemoved": "Language was removed",
+  "LanguageNotRemoved": "The language was removed",
   "YourLogin": "Your login",
   "EnterYourLogin": "Please enter your login",
   "YourPassword": "Your password",
