--- a/WebBellwether.Web/appData/translations/translation_2.json
+++ b/WebBellwether.Web/appData/translations/translation_2.json
@@ -92,6 +92,7 @@
   "ListOfJokeCategoryIncludesAvailableTranslation": "Lista kategorii kawałów zawierajaca dostepne translacje",
   "OtherTranslationForTheCurrentlySelectedJokeCategoryAndLanguage": "Inne translacje dla aktualnie zaznaczonej kategorii żartu i języka",
   "SelectLanguageForTheJokeCategory": "Wybierz język dla kategorii żartu",
+  "JokeCategoryNotEdited": "Kategoria żartu nie została edytowana",
   "JokeCategoryEdited": "Kategoria żartu została edytowana",
   "JokeCategoryNotExists": "Kategoria żartu nie istnieje",
   "JokeCategoryDeleted": "Kategoria żartu została usunięta",
@@ -140,6 +141,9 @@
   "LanguageExists": "Taki język juz istnieje",
   "RemovingLanguage": "Usuwanie języka :",
   "RemovingLanguageDialog": "Operacja spowoduje usunięcie wszystkich translacji (struktura strony , gry integracyjne , kawały). Nie będzie możliwości odzyskania tych danych. Język polski oraz angielski są nieusuwalne bo stanowią szablon dla nowych językowych translacji",
+  "LanguageCanNotBeRemoved": "Język nie może został usunięty bo jest na liście językow nieusuwalnych",
+  "LanguageRemoved": "Język został usunięty",
+  "LanguageNotRemoved": "Język nie został usunięty",
   "YourLogin": "Twój login",
   "EnterYourLogin": "Proszę wprowadz swój login",
   "YourPassword": "Twoje hasło",
