fucked reforge complete (add integration game moved to management integration games , new resultStateContainer , and all case removed from solution)

--- a/WebBellwether.Web/appData/translations/translation_1.json
+++ b/WebBellwether.Web/appData/translations/translation_1.json
@@ -46,7 +46,7 @@
   "Details": "Details",
   "GameFeature": "Game details",
   "MoreFunction": "More function",
-  "AddIntegrationGame": "Add integration game",
+  "AddIntegrationGame": "Add game integration for the currently selected main language",
   "ManagementIntegrationGameFeatures": "Menagement game features",
   "NewGame": "New game",
   "GameFeatures": "Game features",
@@ -62,14 +62,13 @@
   "FeaturesDetails": "Features details",
   "SelectDetail": "Select detail",
   "GameAdded": "Game added",
+  "GameNotAdded": "The game is not added",
   "GameExists": "Game with the same name already exists",
   "GameNotExists": "Game not exists",
   "GameEdited": "Game edited",
+  "GameNotEdited": "The game has not been edited",
   "GameRemoved": "Game removed",
-  "SeveralLanguagesDescription": "If you want to add the game for several languages, select options below. After filling out the required fields add the game and then change the language and then fill in the name and description , features of the game for the next translation will automatically be changed according to the selected language . Remember to turn off the options at the end !",
-  "GameForSeveralLanguages": "Game for several languages",
-  "ForSeveralLanguages": "for several languages",
-  "SeveralLanguageGameAdded": "You can add another translation",
+  "GameNotRemoved": "The game has not been removed",
   "SeveralLanguageGameError": "The game has already this translation",
   "Previous": "Previous",
   "Next": "Next",
@@ -104,7 +103,7 @@
   "SaveJoke": "Save joke",
   "DeleteJoke": "Remove joke",
   "JokeAdded": "Joke has been added",
-  "ThisJokeExists": "This joke is already exists",
+  "JokeExists": "This joke is already exists",
   "JokeNotAdded": "Joke has not been added .",
   "JokeDeleted": "Joke has been removed",
   "JokeNotDeleted": "Joke has not been removed",
@@ -164,11 +163,11 @@
   "TranslationAdded": "Translation added",
   "TranslationEdited": "Translation was edited",
   "TranlastionRemoved": "Translation was removed",
-  "TranslationNotAdded": "The translation has not been added to try to change its name",
-  "TranslationNotEdited": "The transaction has not been edited try to change its name",
+  "TranslationNotAdded": "The translation has not been added",
+  "TranslationNotEdited": "The transaction has not been edited",
   "TranslationNotRemoved": "Translation was not removed",
   "GameTranslationNotExists": "Game translation not exists",
-  "GameFeaturesTranslationNotExists": "Game feature translation not exists",
+  "GameFeatureTranslationNotExists": "Game feature translation not exists",
   "HomeTranslationBasedOnTheCurrentlySelectedLanguagePortal": "The main translation based on the currently selected language portal",
   "OtherTranslationForTheCurrentlySelectedGameAndLanguage": "Other translations for the currently selected game and language",
   "AutoCompleteGameFeaturesForLanguage": "Details of the game will be automatically translated into the current language to another translation",
@@ -178,5 +177,5 @@
   "Translate": "Translate",
   "RemoveGameTranslation": "Remove game translation",
   "Delete": "Delete",
-  "CriticalError": "Critical error you must debug this !!"
+  "Error": "Fatal error that was recorded and will be soon corrected"
 }
