--- a/WebBellwether.Web/appData/translations/translation_2.json
+++ b/WebBellwether.Web/appData/translations/translation_2.json
@@ -46,7 +46,7 @@
   "Details": "Detale",
   "GameFeature": "Detale gry",
   "MoreFunction": "Więcej funkcji",
-  "AddIntegrationGame": "Dodaj grę integracyjną",
+  "AddIntegrationGame": "Dodaj grę integracyjną dla aktualnie zaznaczonego glównego języka",
   "ManagementIntegrationGameFeatures": "Zarządzanie cechami gier",
   "NewGame": "Nowa gra",
   "GameFeatures": "Cechy gry",
@@ -62,14 +62,13 @@
   "FeaturesDetails": "Detale cech",
   "SelectDetail": "Wybierz detal",
   "GameAdded": "Gra dodana",
+  "GameNotAdded": "Gra nie została dodana",
   "GameExists": "Gra o takiej nazwie już istnieje",
   "GameNotExists": "Gra nie istnieje",
   "GameEdited": "Gra została edytowana",
+   "GameNotEdited": "Gra nie została edytowana",
   "GameRemoved": "Gra została usunięta",
-  "SeveralLanguagesDescription": "Jeśli chcesz dodać grę dla kilku językow zaznacz opcje poniżej. Po wypełnieniu wymaganych pól dodaj gre a następnie zmień język i ponownie wypełnij nazwe oraz opis , cechy gry dla kolejnej translacji zostoną automatycznie zmienione według ustawionego języka . Pamiętaj aby wyłączyć opcje po zakończeniu !",
-  "GameForSeveralLanguages": "Gra dla wielu języków",
-  "ForSeveralLanguages": "dla wielu języków",
-  "SeveralLanguageGameAdded": "Możesz dodać kolejną translację",
+  "GameNotRemoved": "Gra nie została usunieta",
   "SeveralLanguageGameError": "Gra posiada już taką translację",
   "Previous": "Wstecz",
   "Next": "Dalej",
@@ -103,7 +102,7 @@
   "RemoveJokeCategoryTranslation": "Usuwanie translacji kategori żartu",
   "SelectCategoryForJoke": "Wybierz kategorie dla żartu",
   "JokeAdded": "Zart został dodany",
-  "ThisJokeExists": "Taki żart już istnieje",
+  "JokeExists": "Taki żart już istnieje",
   "JokeNotAdded": "Żart nie został dodany .",
   "JokeDeleted": "Żart został usunięty",
   "JokeNotDeleted": "Żart nie został usunięty",
@@ -164,10 +163,10 @@
   "TranslationAdded": "Translacja została dodana",
   "TranslationEdited": "Translacja została edytowana",
   "TranlastionRemoved": "Translacja została usunięta",
-  "TranslationNotAdded": "Translacja nie została dodana spróbuj zmienić jej nazwę",
-  "TranslationNotEdited": "Translacja nie została edytowana spróbuj zmienić jej nazwę",
+  "TranslationNotAdded": "Translacja nie została dodana",
+  "TranslationNotEdited": "Translacja nie została edytowana",
   "GameTranslationNotExists": "Translacja gry nie istnieje",
-  "GameFeaturesTranslationNotExists": "Cechy translacji gry nie istnieją",
+  "GameFeatureTranslationNotExists": "Cechy translacji gry nie istnieją",
   "TranslationNotRemoved": "Translacja nie została usunięta",
   "HomeTranslationBasedOnTheCurrentlySelectedLanguagePortal": "Głowna translacja bazująca na aktualnie wybranym języku portalu",
   "OtherTranslationForTheCurrentlySelectedGameAndLanguage": "Inne translacje dla aktualnie zaznaczonej gry i języka",
@@ -178,5 +177,5 @@
   "Translate": "Przetłumacz",
   "RemoveGameTranslation": "Usuwanie translacji gry",
   "Delete": "Usuń",
-  "CriticalError": "Błąd krytyczny musisz debugować !!"
+  "Error": "Bład krytyczny który został odnotowany i zostanie niebawem poprawiony"
 }
