--- a/WebBellwether.Web/appData/translations/translation_2.json
+++ b/WebBellwether.Web/appData/translations/translation_2.json
@@ -66,7 +66,7 @@
   "GameExists": "Gra o takiej nazwie już istnieje",
   "GameNotExists": "Gra nie istnieje",
   "GameEdited": "Gra została edytowana",
-   "GameNotEdited": "Gra nie została edytowana",
+  "GameNotEdited": "Gra nie została edytowana",
   "GameRemoved": "Gra została usunięta",
   "GameNotRemoved": "Gra nie została usunieta",
   "SeveralLanguageGameError": "Gra posiada już taką translację",
@@ -131,7 +131,7 @@
   "PublishLanguage": "Publikuj język",
   "HowToPublishLanguage": "Aby opublikować język wypełnione musza być wszystkie wartości dla klucza (lista poniżej) . Minimum jeden język musi być publiczny",
   "LanguageFileNotExists": "Plik językowy nie istnieje",
-  "EmptyKeyExists": "Plik językowy zawiera puste pozycje",
+  "EmptyKeysExists": "Plik językowy zawiera puste pozycje",
   "OnlyOnePublicLangugae": "Istnieje tylko jeden publiczny język",
   "LanguageHasBeenPublished": "Język został opublikowany",
   "LanguageHasBeenNonPublic": "Język nie jest publiczny",
@@ -188,6 +188,8 @@
   "TranslateAllLanguageKeys": "Przetłumacz wszystkie klucze",
   "QuantityOfLanguageKeys": "Obecna liczba kluczy to :",
   "TranslationOfAllKeyLanguage": "Tłumaczenie wszystkich kluczy językowych",
-  "TranslateAllLangaugeKeysDescription": "Translacja może trochę potrwać . Uwaga dane zostaną automatycznie zapisane , proszę o weryfikację wynikow"
-
+  "TranslateAllLangaugeKeysDescription": "Translacja może trochę potrwać . Uwaga dane zostaną automatycznie zapisane , proszę o weryfikację wynikow",
+  "ContentLanguageFilesAreNotCompatible": "Zawartości plików językowych nie sa zgodne ",
+  "KeyValuesAreCorrectlyFilled": "Wartości kluczy zostały poprawnie wypełnoine",
+  "KeyValuesAreNotFilled": "Wartości kluczy nie zostały wypełnione"
 }
