--- a/WebBellwether.Web/appData/translations/translation_1.json
+++ b/WebBellwether.Web/appData/translations/translation_1.json
@@ -119,7 +119,6 @@
   "MainLanguageTranslation": "The main language translation",
   "LanguageName": "Language name",
   "LanguageShortName": "Language short name for translating services",
-  "LanguageFlag": "Language flag",
   "SaveBasicLanguageInformation": "Save basic information",
   "Key": "Key",
   "Value": "Value",
@@ -191,5 +190,6 @@
   "TranslateAllLangaugeKeysDescription": "The translation may take some time. Please note that the data will be automatically recorded, please verify results",
   "ContentLanguageFilesAreNotCompatible": "Content language files are not compatible",
   "KeyValuesAreCorrectlyFilled": "Key values are correctly filled",
-  "KeyValuesAreNotFilled": "Key values are not filled"
+  "KeyValuesAreNotFilled": "Key values are not filled",
+  "Home": "Home"
 }
