there was a break due to work. Filters corrected translation on games and pieces work remains to add features of the game + translation

--- a/WebBellwether.Web/appData/translations/translation_1.json
+++ b/WebBellwether.Web/appData/translations/translation_1.json
@@ -191,5 +191,6 @@
   "ContentLanguageFilesAreNotCompatible": "Content language files are not compatible",
   "KeyValuesAreCorrectlyFilled": "Key values are correctly filled",
   "KeyValuesAreNotFilled": "Key values are not filled",
-  "Home": "Home"
+  "Home": "Home",
+  "CreateFeatures": "Create features"
 }
