a lot of work and the results are poor . List of jokes (for user added) , pagination in new list added . Search for integration games work only per game name (game features I leave at the end) and small bug fixed.

--- a/WebBellwether.Web/appData/translations/translation_1.json
+++ b/WebBellwether.Web/appData/translations/translation_1.json
@@ -194,6 +194,7 @@
   "Home": "Home",
   "CreateFeatures": "Create features",
   "GameFeaturesAdded": "Game features have been added",
-  "GameFeaturesNotAdded": "Game features have been added"
+  "GameFeaturesNotAdded": "Game features have been added",
+  "Jokes": "Jokes"
 
 }
