--- a/WebBellwether.Web/appData/translations/translation_2.json
+++ b/WebBellwether.Web/appData/translations/translation_2.json
@@ -194,5 +194,6 @@
   "Home": "Home",
   "CreateFeatures": "Utwórz cechy",
   "GameFeaturesAdded": "Cechy gry zostały dodane",
-  "GameFeaturesNotAdded": "Cechy gry nie zostały dodane"
+  "GameFeaturesNotAdded": "Cechy gry nie zostały dodane",
+  "Jokes": "Kawały"
 }
