filtry dodane + nowy piękny wygląd .

--- a/WebBellwether.Web/appData/translations/translation_1.json
+++ b/WebBellwether.Web/appData/translations/translation_1.json
@@ -13,6 +13,12 @@
   "Login": "Login",
   "LogOut": "Logout",
   "Search": "Search",
+  "SearchByName": "Search by name",
+  "SearchGame": "Search game",
+  "SearchJoke": "Search joke",
+  "SearchJokeCategory": "Joke category",
+  "SearchByContent": "Search by content",
+  "SearchResetAllFilters": "Reset all filters",
   "EmailAddress": "Email address",
   "Password": "Password",
   "ForgetThePassword": "Forget the password ?",
@@ -155,7 +161,7 @@
   "Success": "Succes",
   "Failure": "Failure",
   "GameFeatureEdited": "Feature game was edited",
-  "GameFeatureDetailEdited": "Retail features of the game was edited",   
+  "GameFeatureDetailEdited": "Retail features of the game was edited",
   "GameFeatueNotEdited": "Feature game has not been edited",
   "GameFeatureDetailNotEdited": "Retail features of the game has not been edited",
   "SaveTranslation": "Save translation",
