--- a/WebBellwether.Web/appData/translations/translation_2.json
+++ b/WebBellwether.Web/appData/translations/translation_2.json
@@ -13,6 +13,12 @@
   "Login": "Logowanie",
   "LogOut": "Wyloguj",
   "Search": "Szukaj",
+  "SearchByName": "Szukaj według nazwy",
+  "SearchGame": "Szukaj gry",
+  "SearchJoke": "Szukaj żartu",
+  "SearchJokeCategory": "Kategoria żartu",
+  "SearchByContent": "Szukaj po zawartości",
+  "SearchResetAllFilters": "Resetuj wszystkie filtry",
   "EmailAddress": "Email adres",
   "Password": "Hasło",
   "ForgetThePassword": "Zapomniałeś hasła ?",
