small change for bellwether client

--- a/WebBellwether.Web/appData/translations/translation_1.json
+++ b/WebBellwether.Web/appData/translations/translation_1.json
@@ -203,6 +203,9 @@
   "CreateFeatures": "Create features",
   "GameFeaturesAdded": "Game features have been added",
   "GameFeaturesNotAdded": "Game features have been added",
-  "Jokes": "Jokes"
-
+  "Jokes": "Jokes",
+  "Settings": "Settings",
+  "CurrentLanguage": "Current language",
+  "ChangeLanguage": "Change language",
+  "ApplyLanguage": "Apply language"
 }
